k8s/01-mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ccms-mysql
  namespace: ccms-prod
spec:
  selector:
    matchLabels:
      app: ccms-mysql
  template:
    metadata:
      labels:
        app: ccms-mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-data
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-data
        persistentVolumeClaim:
          claimName: ccms-mysql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: ccms-mysql-service
  namespace: ccms-prod
spec:
  type: ClusterIP
  selector:
    app: ccms-mysql
  ports:
  - port: 3306
    targetPort: 3306
